--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 class = 'header'>My landing page</h1>
     <div>
-        <a href= 'pizza.html'>Perfect Pizza Pamphlet Design</a>
+        <a href= 'pizza.html'>Pizza Cart Design</a>
         </div>
 </body>
 </html>
